@@ -79,8 +79,7 @@ public class BlockMaterialSlab extends BlockBuildingBricksSlab implements BlockM
 	@Override
 	public boolean removedByPlayer(World world, BlockPos pos, EntityPlayer player,
 			boolean willHarvest) {
-		ItemStack stack = TileMaterial.getPickBlock(world.getBlockState(pos).getBlock(), null,
-				world, pos);
+		ItemStack stack = TileMaterial.getHarvestBlock(world, pos, player);
 		boolean removed = super.removedByPlayer(world, pos, player, willHarvest);
 		if (removed && !world.isRemote && !player.capabilities.isCreativeMode)
 			ItemStackUtils.dropFromBlock(world, pos, stack);
