@@ -1,0 +1,9 @@
+package com.hea3ven.buildingbricks.core.blocks.base;
+
+import com.hea3ven.buildingbricks.core.materials.MaterialBlockLogic;
+
+public interface BlockBuildingBricks {
+
+	MaterialBlockLogic getBlockLogic();
+
+}
