@@ -3,6 +3,8 @@
     "id": "glass",
     "type": "glass",
     "hardness": 0.3,
+    "normalHarvest": "",
+    "silkHarvest": "glass",
     "textures": "minecraft:blocks/glass",
     "blocks": {
         "full": "minecraft:glass"
