@@ -2,6 +2,8 @@
     "name": "Grass",
     "id": "grass",
     "type": "grass",
+    "normalHarvest": "dirt",
+    "silkHarvest": "grass",
     "textures": {
         "top": "minecraft:blocks/grass_top",
         "bottom": "minecraft:blocks/dirt",
