@@ -3,6 +3,8 @@
     "id": "packed_ice",
     "type": "packed_ice",
     "hardness": 0.5,
+    "normalHarvest": "",
+    "silkHarvest": "packed_ice",
     "textures": "minecraft:blocks/ice_packed",
     "blocks": {
         "full": "minecraft:packed_ice"
